# Germany

./: .gitignore  README.md  Roadmap.md  ch.banana.apps.ustvagermany.js  ch.banana.filter.export.datev.buchungsstapel.dialog.ui  dbf_ust_115_gewerbe_skr03.ac2  geierlein.js  xmlwriter.js
Datev/: README.md  ch.banana.filter.export.datev.buchungsstapel.dialog.ui  ch.banana.filter.export.datev.buchungsstapel.js  ch.banana.filter.export.datev.debitorenkreditoren.dialog.ui  ch.banana.filter.export.datev.debitorenkreditoren.js  ch.banana.filter.export.datev.kontenbeschriftungen.dialog.ui  ch.banana.filter.export.datev.kontenbeschriftungen.js  ch.banana.filter.export.datev.manifest.json  ch.banana.filter.import.datev.accounts.js  ch.banana.filter.import.datev.buchungsstapel.js  ch.banana.filter.import.datev.debitorenkreditoren.js  ch.banana.filter.import.datev.js  ch.banana.filter.import.datev.transactions.js  datev.manifest.json  datev.qrc  datev.sbaa  (+3 more)
importApps/dkb_deutschland_import_bank_statement_cav/: CMakeLists.txt  ch.banana.germany.import.dkb.js  ch.banana.germany.import.dkb.manifest.json  ch.banana.germany.import.dkb.qrc  ch.banana.germany.import.dkb.sbaa
importApps/dkb_deutschland_import_bank_statement_cav/test/: ch.banana.germany.import.dkb.test.js
importApps/dkb_deutschland_import_bank_statement_cav/test/testcases/: csv_dkb_deutschland_example_format1_20250331.csv
importApps/dkb_deutschland_import_bank_statement_cav/test/testexpected/ch.banana.germany.import.dkb.test/: ch.banana.germany.import.dkb.test.txt  csv_dkb_deutschland_example_format1_20250331.txt
(+383 files in other folders)
